# batch-renamer

./: Cargo.toml  README.md
.github/workflows/: publish.yml  test.yml
src/: batch-rename.rs  lib.rs  print-rename.rs
