[package]
name = "batch-rename"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "batch-rename"
path = "src/batch-rename.rs"

[dependencies]
anyhow = "1.0.68"
futures = {version = "0.3", default-features = false, features = ["async-await", "std"]}
tokio = { version = "1.34", features = ["macros", "rt"] }
