[package]
name = "batch-renamer"
version = "0.1.0"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/batch-renamer"
repository = "https://github.com/d-e-s-o/batch-renamer.git"
readme = "README.md"
categories = [
  "asynchronous",
  "filesystem",
  "command-line-utilities",
]
keywords = ["rename", "cli", "async", "filesystem"]
description = """
Framework and command line utilities for interactive renaming of a
potentially large number of files.
"""
default-run = "batch-rename"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "batch-rename"
path = "src/batch-rename.rs"

[[bin]]
name = "print-rename"
path = "src/print-rename.rs"

[build-dependencies]
anyhow = "1.0.68"
grev = "0.1.3"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
futures = {version = "0.3", default-features = false, features = ["async-await", "std"]}
tempfile = "3.3.0"
tokio = { version = "1.34", default-features = false, features = ["fs", "macros", "process", "rt"] }
